<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/contacts"
        style="@style/DefaultTitleTextStyle"
        android:layout_width="258dp"
        android:layout_height="34dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/bold"
        android:letterSpacing=".006"
        android:text="@string/title_page"
        app:layout_constraintBottom_toTopOf="@+id/buildingmanager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView

        android:id="@+id/buildingmanager"
        style="@style/DefaultNameStyle"
        android:layout_width="201dp"
        android:layout_height="23dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="83dp"
        android:fontFamily="@font/medium"
        android:letterSpacing=".0043"
        android:text="@string/first_contact"
        app:layout_constraintEnd_toStartOf="@+id/manager"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/manager"
        style="@style/DefaultTextStyle"
        android:layout_width="217dp"
        android:layout_height="17dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/effra"
        android:text="@string/name_first_contact"
        app:layout_constraintBottom_toTopOf="@+id/email_immobilier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buildingmanager"
        android:letterSpacing=".0043"/>

    <TextView
        android:id="@+id/email_immobilier"
        style="@style/DefaultGreyStyle"
        android:layout_width="268dp"
        android:layout_height="21dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="88dp"
        android:letterSpacing=".0043"
        android:text="@string/email"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manager" />

    <TextView


        android:id="@+id/textView4"
        style="@style/DefaultNameStyle"
        android:layout_width="129dp"
        android:layout_height="21dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/medium"
        android:letterSpacing=".0043"
        android:text="@string/pc_contact"
        app:layout_constraintBottom_toTopOf="@+id/pc_sécurité_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_immobilier"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/pc_sécurité_textview"
        style="@style/DefaultTextStyle"
        android:layout_width="110dp"
        android:layout_height="16dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/effra"
        android:letterSpacing=".0043"
        android:text="@string/pc_contact"
        app:layout_constraintBottom_toTopOf="@+id/email_pc_securité_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView

        android:id="@+id/email_pc_securité_textview"
        style="@style/DefaultGreyStyle"
        android:layout_width="181dp"
        android:layout_height="18dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="33dp"
        android:letterSpacing=".0043"
        android:text="@string/email_pc_contact"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/services"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/services"
        style="@style/DefaultTitleTextStyle"
        android:layout_width="356dp"
        android:layout_height="31dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/bold"
        android:letterSpacing=".006"
        android:text="@string/services"
        app:layout_constraintBottom_toTopOf="@+id/fragment_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_pc_securité_textview" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="19dp"
        android:layout_height="18dp"
        android:layout_marginStart="346dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="25dp"
        android:src="@drawable/telephone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buildingmanager"
        app:layout_constraintTop_toBottomOf="@+id/contacts" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="19dp"
        android:layout_height="18dp"
        android:layout_marginStart="346dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="46dp"
        android:src="@drawable/telephone"
        app:layout_constraintBottom_toBottomOf="@+id/email_pc_securité_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/email_immobilier"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="444dp"
        android:layout_height="186dp"
        android:layout_marginStart="-1dp"
        android:accessibilityLiveRegion="none"
        android:scaleType="centerCrop"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:src="@drawable/washigtonhome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="00"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_marginStart="-1dp"
        tools:layout_marginTop="0dp" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="340dp"
        android:layout_height="487dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/services"
        />

</androidx.constraintlayout.widget.ConstraintLayout>